--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -1,1 +1,10 @@
-<p>nav-bar works!</p>
+<div class="p-4 d-flex nav">
+    <a class="text-success me-auto navElement" routerLink="" routerLinkActive="is-active" 
+    [routerLinkActiveOptions]="{exact: true}">Products App</a>
+    <a class="me-4 navElement text-black" routerLink="register" routerLinkActive="is-active"
+    [routerLinkActiveOptions]="{exact: true}">Register</a>
+    <a class="navElement text-black me-4" routerLink="login" routerLinkActive="is-active"
+    [routerLinkActiveOptions]="{exact: true}">Login</a>
+    <a><i class="fas fa-shopping-cart"></i></a>
+</div>
+
