--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,1 +1,15 @@
-<p>product-card works!</p>
+<p-card header="catecory , title , , price" [style]="{ width: '300px' }">
+    <ng-template pTemplate="header">
+        <p-button label="Cancel" icon="pi pi-times" styleClass="p-button-secondary" [style]="{ 'margin-left': '.5em' }"></p-button>
+        <img alt="Card" src="https://primefaces.org/cdn/primeng/images/usercard.png" />
+    </ng-template>
+    <p>
+        description
+    </p>
+    <p>
+        rating
+    </p>
+    <ng-template pTemplate="footer">
+        <p-button label="add" icon="pi pi-check"></p-button>
+    </ng-template>
+</p-card>
