--- a/src/app/products-section/products-section.component.html
+++ b/src/app/products-section/products-section.component.html
@@ -1,15 +1,16 @@
 <h1 class=" p-3  mb-2 ">Our Products</h1>
 <hr class="w-75 mx-auto mb-4" />
+<div class="container "> 
 <div class="row row-cols-1 row-cols-md-3 m-2 g-4">
   <ng-container *ngFor="let product of products; let i = index">
     <div class="col" *ngIf="i < 9">
-      <app-product-card [currentproduct]="product"></app-product-card>
+      <app-product-card [currentproduct]="product">
+      </app-product-card>
+     
     </div>
   </ng-container>
 </div>
 <button class="btn btn-secondary mb-3 show " type="button" (click)="ShowMore()">Show More</button>
-
-
-
+</div>
 
  
