--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,1 +1,14 @@
-<p>products works!</p>
+<h1 class=" p-3  mb-1 ">All Products</h1>
+<hr class="w-75 mx-auto mb-4" />
+<div class="row row-cols-1 row-cols-md-3 m-2 g-4">
+    @for (product of products; track $index) {
+    <ng-container>
+      <app-product-card [currentproduct]="product"></app-product-card>
+  </ng-container>
+}
+</div>
+
+
+
+
+ 
