--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -1,1 +1,13 @@
-<p>not-found works!</p>
+<div class="d-flex align-items-center justify-content-center vh-100">
+    <div class="text-center row">
+        <div class=" col-md-12 mt-5 h-50 ">
+            <img src="https://t4.ftcdn.net/jpg/03/88/63/83/360_F_388638369_wSBADhKfhiTx6Q5Pz1xfdpy6zotku1Sg.jpg" alt=""
+                class="img-fluid">
+        </div>
+        <div class=" col-md-6 mt-2">
+            
+            <a routerLink="/" class="btn btn-primary">Go Home</a>
+        </div>
+
+    </div>
+</div>
