--- a/src/app/product-card/product-card.component.html
+++ b/src/app/product-card/product-card.component.html
@@ -1,3 +1,5 @@
+<app-nav-bar></app-nav-bar>
+
 @if(currentproduct){
   
     <p-card  [header]="currentproduct.category +   '   -   ' + currentproduct.price + ' $' " 
