--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,5 @@
+<app-nav-bar></app-nav-bar>
+
 <h1 class=" p-3  mb-1 ">All Products</h1>
 <hr class="w-75 mx-auto mb-4" />
 <div class="row row-cols-1 row-cols-md-3 m-2 g-4">
