--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -16,7 +16,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="all-products" routerLinkActive="is-active" 
+            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="/all-products" routerLinkActive="is-active" 
             [routerLinkActiveOptions]="{exact: true}">
             All Products
         </a>
@@ -24,18 +24,25 @@
         </ul>
         <ul class="navbar-nav ms-auto ">
           <li class="nav-item">
-            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="login" routerLinkActive="is-active" 
+            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="/login" routerLinkActive="is-active" 
             [routerLinkActiveOptions]="{exact: true}">
              Login
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="register" routerLinkActive="is-active" 
+            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="/register" routerLinkActive="is-active" 
             [routerLinkActiveOptions]="{exact: true}">
-             <i class="fa-solid fa-circle-user me-1"></i> 
              Register
             </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link mx-2 text-uppercase text-white-50" routerLink="/cart" routerLinkActive="is-active" 
+            [routerLinkActiveOptions]="{exact: true}">
+            <i class="fa-regular fa-cart-shopping"></i>
+            <img style="width: 25px; height: 25px; margin: 5px;" src="../../assets/cart.png">
+          cart
+            </a>
+        </li>
         </ul>
       </div>
     </div>
