--- a/src/app/products-section/products-section.component.html
+++ b/src/app/products-section/products-section.component.html
@@ -10,7 +10,7 @@
     </div>
   </ng-container>
 </div>
-<button class="btn btn-secondary mb-3 show " type="button" (click)="ShowMore()">Show More</button>
+<button class="btn btn-secondary mb-5 mt-5 show " type="button" (click)="ShowMore()">Show More</button>
 </div>
 
  
