--- a/src/app/log-in/log-in.component.css
+++ b/src/app/log-in/log-in.component.css
@@ -1,3 +1,11 @@
-.login-form{
-    margin-top: 180px;
+
+
+*{
+    margin: 0px;
+    padding: 0px;
 }
+.container{
+    margin: 100px auto;
+    padding: 20px;
+}
+
