--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,16 +1,19 @@
-<app-nav-bar></app-nav-bar>
-<form class=" login-form w-50 border shadow m-auto p-4 " 
-#loginForm="ngForm"
-(ngSubmit) = "handleForm(loginForm)">
-    <label for="email" class="form-label">Email</label>
-    <input type="email" name="email" id="email" class="form-control"
-    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$"
-    required
-    [(ngModel)] = "formValues.email"
-    #email = "ngModel"
-    >
-    @if(email.invalid && (email.touched || email.dirty) ) {
-        <div id="emailHelp" class="form-text text-danger">
+<div class=" container w-50 h-75 bg-info-subtle rounded-3">
+  <form #wrapperLogin="ngForm" (ngSubmit)="handleLogin(wrapperLogin)">
+    <h2 class="m-auto ">Log In</h2>
+
+    <div class="mb-1 p-3">
+      <label for="email" class="form-label">Email address</label>
+
+      <input type="email" name="email" id="email" class="form-control p-2"
+      pattern="^[\w]{1,}[\w.+-]{0,}@[\w-]{2,}([.][a-zA-Z]{2,}|[.][\w-]{2,}[.][a-zA-Z]{2,})$"
+      required
+      [(ngModel)]="formValues.email"
+      #email = "ngModel"
+      >      
+
+      @if(email.invalid && (email.touched || email.dirty) ) {
+        <div id="emailHelp" class="form-text text-danger p-2">
             @if(email.errors?.['required']){
             <small>This field is required</small>
             } 
@@ -19,30 +22,59 @@
             }
         </div>
     }
+    </div>
     <br>
-    <label for="password" class="form-label">Password</label>
-    <input type="password" name="password" id="password" class="form-control"
+    <div class="p-2">
+      <label for="password" class="form-label p-2">Password</label>
+
+      <input type="password" name="password" id="password" class="form-control p-2"
     required
+    pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{8,}$"
     minlength="8"
     maxlength="30"
     [(ngModel)] = "formValues.password"
     #password = "ngModel"
     >
     @if(password.invalid && (password.touched || password.dirty) ) {
-        <div id="passwordHelp" class="form-text text-danger">
-          @if(password.errors?.['required']){
-            <small>This field is required</small>
-          } 
-          @if(password.errors?.['minlength']) {
-            <small>Min. length is 8 characters</small>
-          } 
-          @if(password.errors?.['maxlength']) {
-            <small>Max. length is 30 character</small>
-          }
-        </div>
+      <div id="passwordHelp" class="form-text text-danger">
+        @if(password.errors?.['required']){
+          <small>This field is required</small>
+        } 
+        @if(password.errors?.['minlength']) {
+          <small>Min length is 8 characters</small>
+        } 
+        @if(password.errors?.['maxlength']) {
+          <small>Max length is 30 character</small>
         }
-    <br>
-    <button type="submit" class="btn btn-primary w-100" [disabled]="!loginForm.valid">Login</button><br>
-    <span style="font-size: 12px;">Don't have an account? <a routerLink="/register">Register</a></span>
+      </div>
+      }
+  <br>
 
-</form>
+  <a href="#">forget my password</a>
+</div>
+
+    <div class="mb-3 form-check">
+      <input type="checkbox" name="remember" class="form-check-input m-2" id="exampleCheck1">
+      <label class="form-check-label" for="exampleCheck1">Remember me</label>
+    </div>
+
+    <button type="submit" name="submit" class="btn btn-primary mb-2 p-2" routerLink="/">Log In</button> <br>
+    <span>Do not have an account</span>
+    <a routerLink="/register" >Rigister Now</a>
+  </form>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
