--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,57 @@
-<app-nav-bar></app-nav-bar>
+<app-nav-bar> </app-nav-bar>
+<div class="flex-box h-auto border-2  w-75">
+    <div class="left">
+        <div class="big-img">
+          <img alt="Card" [src]="productdetail.thumbnail"/>
+        </div>
+        <div class="images">
+            <div class="small-img">
+              <img alt="Card" [src]="productdetail.images[0]"/>
+            </div>
+            <div class="small-img">
+              <img alt="Card" [src]="productdetail.images[1]"/>
+            </div>
+            <div class="small-img">
+                <img alt="Card" [src]="productdetail.images[2]"/>
+            </div>
+            <div class="small-img">
+              <img alt="Card" [src]="productdetail.images[3]"/>           
+            </div>
+        </div>
+</div>
+
+<div class="right">
+<div class="pname">{{productdetail.title}}</div>
+<div class="url">{{productdetail.description}}</div>
+
+<app-rating [rating]="productdetail?.rating"></app-rating>
+
+
+<div class="price">{{productdetail.price}} $</div>
+<div class="btn-box">
+   @if(productdetail.stock>0){ 
+  <button style="color:black;color:antiquewhite;background-color: green;border-radius: 15px;">In stock</button>
+   }@else {
+  <button style="color:black;color:antiquewhite;background-color: rgb(185, 38, 38);border-radius: 15px;">Out of stock</button>
+   }
+</div>
+<div class="btn-box">
+  <p>More information:</p>
+  <div class="quantity">
+    <button class="btn-box1" style="color: black; margin-left: 10px;border-radius: 15px;">Category</button>
+    <button class="btn-box1" style="color: black; margin-left: 10px;border-radius: 15px;">Brand</button>
+  </div>
+</div>
+
+<div class="quantity">
+  <p>Quantity :</p>
+  <input type="number" min="1" max="{{productdetail.stock}}" value="0">
+</div>
+
+<div class="btn-box">
+  <button class="cart-btn">Add to Cart</button>
+  <button class="buy-btn">Buy Now</button>
+
+</div>
+</div>
+</div>
