add count to header

--- a/src/app/nav-bar/nav-bar.component.html
+++ b/src/app/nav-bar/nav-bar.component.html
@@ -40,7 +40,7 @@
             [routerLinkActiveOptions]="{exact: true}">
             <i class="fa-regular fa-cart-shopping"></i>
             <img style="width: 25px; height: 25px; margin: 5px;" src="../../assets/cart.png">
-          cart
+             <span> {{counter}}</span> Cart
             </a>
         </li>
         </ul>
